--- a/conf/machine/rk3399-vaaman.conf
+++ b/conf/machine/rk3399-vaaman.conf
@@ -18,3 +18,6 @@ RK_WIFIBT_FIRMWARES = " \
 MACHINE_EXTRA_RRECOMMENDS:append = " \
 	linux-firmware-rk-cdndp \
 "
+
+PACKAGE_CLASSES = "package_deb"
+EXTRA_IMAGE_FEATURES += "package-management"
