--- a/conf/machine/rk3399-vaaman.conf
+++ b/conf/machine/rk3399-vaaman.conf
@@ -7,6 +7,7 @@
 require conf/machine/include/rk3399.inc
 
 KERNEL_DEVICETREE = "rockchip/rk3399-vaaman-linux.dtb"
+ROCKCHIP_KERNEL_COMPRESSED := "0"
 
 UBOOT_MACHINE = "rk3399-vaaman_defconfig"
 
