conf: vaaman: Install gnupg for APT repositories
Change-Id: I39c80fe81fbe5567cf50fb20fedfc81651d882b1
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/conf/machine/rk3399-vaaman.conf
+++ b/conf/machine/rk3399-vaaman.conf
@@ -22,3 +22,4 @@ MACHINE_EXTRA_RRECOMMENDS:append = " \
 
 PACKAGE_CLASSES = "package_deb"
 EXTRA_IMAGE_FEATURES += "package-management"
+IMAGE_INSTALL:append = "gnupg"
