conf: machine: Extract common configuration into vicharak-common
This will allow us to easily update the common configuration between
Vicharak's next generation Rockchip devices.

Change-Id: Ie457f3ccd63296923321d7f732da45217035c6ed
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/conf/machine/rk3399-vaaman.conf
+++ b/conf/machine/rk3399-vaaman.conf
@@ -5,9 +5,9 @@
 #@NAME: RK3399 Vicharak Vaaman
 
 require conf/machine/include/rk3399.inc
+require conf/machine/include/vicharak-common.inc
 
 KERNEL_DEVICETREE = "rockchip/rk3399-vaaman-linux.dtb"
-ROCKCHIP_KERNEL_COMPRESSED := "0"
 
 UBOOT_MACHINE = "rk3399-vaaman_defconfig"
 
@@ -19,7 +19,3 @@ RK_WIFIBT_FIRMWARES = " \
 MACHINE_EXTRA_RRECOMMENDS:append = " \
 	linux-firmware-rk-cdndp \
 "
-
-PACKAGE_CLASSES = "package_deb"
-EXTRA_IMAGE_FEATURES += "package-management"
-IMAGE_INSTALL:append = "gnupg"
