DONOTMERGE: recipes: Add support for Vicharak Configuration tool
Change-Id: If022929cb6c4347820123a228a00db41e260c870
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/conf/machine/rk3399-vaaman.conf
+++ b/conf/machine/rk3399-vaaman.conf
@@ -20,3 +20,13 @@ MACHINE_EXTRA_RRECOMMENDS:append = " \
 	linux-firmware-rk-cdndp \
     vaaman-bt-start \
 "
+
+UBOOT_EXTLINUX := "1"
+UBOOT_EXTLINUX_CONSOLE := "console=${SERIAL_CONSOLES}"
+UBOOT_EXTLINUX_DEFAULT_LABEL := "Vicharak Default"
+UBOOT_EXTLINUX_FDT := "${KERNEL_DEVICETREE}"
+UBOOT_EXTLINUX_FDTDIR := "rockchip"
+UBOOT_EXTLINUX_KERNEL_ARGS := "rw rootwait earlyprintk quiet"
+UBOOT_EXTLINUX_KERNEL_IMAGE := "Image"
+UBOOT_EXTLINUX_MENU_DESCRIPTION := "Vicharak Vaaman"
+UBOOT_EXTLINUX_ROOT := "root=UUID=${RK_ROOTDEV_UUID}"
