recipes-kernel: Upgrade kernel version to 5.10 for Vaaman
Change-Id: I7b1a9461031ffc0099e0d231b309c75687f4c317
Signed-off-by: UtsavBalar1231 <utsavbalar1231@gmail.com>

--- a/conf/machine/rk3399-vaaman.conf
+++ b/conf/machine/rk3399-vaaman.conf
@@ -8,8 +8,8 @@ require conf/machine/include/rk3399.inc
 require conf/machine/include/vicharak-common.inc
 
 KERNEL_DEVICETREE = "rockchip/rk3399-vaaman-linux.dtb"
-PREFERRED_VERSION_linux-rockchip ?= "5.10%"
-LINUXLIBCVERSION ?= "5.10-vicharak%"
+PREFERRED_VERSION_linux-rockchip = "5.10%"
+LINUXLIBCVERSION = "5.10-vicharak%"
 
 UBOOT_MACHINE = "rk3399-vaaman_defconfig"
 
