--- a/recipes-kernel/linux/files/rk3399_vaaman.cfg
+++ b/recipes-kernel/linux/files/rk3399_vaaman.cfg
@@ -4,6 +4,9 @@ CONFIG_BOARD_VICHARAK_VAAMAN=y
 # Enable RTL8822CS Wi-Fi support
 CONFIG_RTL8822CS=m
 
+# Disable Rockchip WiFi driver
+# CONFIG_AP6XXX is not set
+
 # Disable unused UART BT drivers
 # CONFIG_BT_HCIUART_3WIRE is not set
 # CONFIG_BT_HCIUART_BCM is not set
